# fritz_box_tr064_igd_api_files_generator

./: Cargo.toml  README.md
src/: main.rs
src/api_handling/: api_desc.rs  api_desc_dir.rs  mod.rs
